@@ -90,7 +90,7 @@ class ZMFieldMatchRule extends ZMRule {
      * @return string Localized error message.
      */
     public function getErrorMsg() {
-        return zm_l10n_get((null != $this->getMsg() ? $this->getMsg() : $this->getDefaultMsg()), $this->getName(), $this->other_);
+        return sprintf(_zm((null != $this->getMsg() ? $this->getMsg() : $this->getDefaultMsg())), $this->getName(), $this->other_);
     }
 
 
