@@ -100,6 +100,9 @@ Release 0.9.10
 - add support for (multiple) filter in ZMSavantView
 - add support for PHP short tags '<%=' with '<?php echo '; disabled per
   default view definition setting
+- add ZMFileLocale - a locale provider using the ZenMagick zm_l10n_get
+  function
+- update core/mvc to using _zm
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
